[package]
name = "rekindle-node"
version = "0.1.0"
edition = "2021"
description = "Rekindle daemon — IPC bus, state management, and Veilid bridge"
license = "MIT"

[lints]
workspace = true

[dependencies]
rekindle-chat = { path = "../rekindle-chat" }
rekindle-transport = { path = "../rekindle-transport" }
rekindle-storage = { path = "../rekindle-storage" }
rekindle-types = { path = "../rekindle-types" }
rekindle-aead = { path = "../rekindle-aead" }
rekindle-hash = { path = "../rekindle-hash" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
toml = "0.8"

# IPC transport encryption (Noise IK)
snow = { git = "https://github.com/mcginty/snow", rev = "295dc7b", features = ["ring-accelerated"] }

# Crypto utilities
blake3 = "1"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
rand = "0.8"
subtle = "2"

# Bulk transport crypto (AES-256-GCM via AES-NI/AVX-512 VAES)
aws-lc-rs = { version = "1.16", features = ["aws-lc-sys"] }

# Parallel encryption (CPU-bound work-stealing pool)
rayon = "1.10"

# Cross-runtime channel (rayon workers <-> tokio writer bridge)
crossbeam = "0.8"

# LRU cache for idempotency (O(1) eviction)
lru = "0.14"
static_assertions = "1.1"

# Identifiers
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Safe syscalls (UCred extraction, prctl, setrlimit)
rustix = { version = "1", features = ["process"] }
libc = "0.2"

# Logging and errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }
# smallvec for PendingRequests per-conn msg_id lists
smallvec = "1"
thiserror = { workspace = true }
anyhow = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
dashmap = "6"
bytes = "1"

# systemd integration (sd_notify READY=1, watchdog keepalive)
sd-notify = "0.4"

# Filesystem config hot-reload
notify = "7"

# Sandbox (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libseccomp = "0.3"

# OS keyring for signing key storage
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
hex = "0.4"

# io_uring transport (optional, behind feature flag)
tokio-uring = { version = "0.5", optional = true }
io-uring = { version = "0.7", optional = true }

[features]
# Cross-platform defaults: aegis and sha256-mb use portable C with
# optional SIMD — they compile everywhere. bulk-epoll is the portable
# I/O backend. bulk-uring and bulk-memfd are Linux-only and must be
# enabled explicitly (e.g., via workspace Cargo.toml or CI flags).
default = ["bulk-epoll", "aegis", "sha256-mb"]
bulk-epoll = []
bulk-uring = ["dep:tokio-uring", "dep:io-uring"]
bulk-memfd = []
aegis = ["rekindle-aead/aegis"]
sha256-mb = ["rekindle-hash/sha256-mb"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
snow = { git = "https://github.com/mcginty/snow", rev = "295dc7b", features = ["ring-accelerated"] }

[[bench]]
name = "ipc_routing"
path = "benches/ipc_routing.rs"
harness = false

[[bench]]
name = "event_fanout"
path = "benches/event_fanout.rs"
harness = false

[[bench]]
name = "bulk_throughput"
path = "benches/bulk_throughput.rs"
harness = false

[[bench]]
name = "sha256_streaming"
path = "benches/sha256_streaming.rs"
harness = false

[[bench]]
name = "bulk_crypto"
path = "benches/bulk_crypto.rs"
harness = false

[[bench]]
name = "bulk_pipeline"
path = "benches/bulk_pipeline.rs"
harness = false

[[bench]]
name = "bulk_receive"
path = "benches/bulk_receive.rs"
harness = false

[[bench]]
name = "bulk_e2e"
path = "benches/bulk_e2e.rs"
harness = false

[[bench]]
name = "bulk_socket"
path = "benches/bulk_socket.rs"
harness = false
