[package]
name = "rekindle-ratchet"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Triple Ratchet implementation — PQXDH rev 2, Double Ratchet with Header Encryption, SPQR/ML-KEM Braid"
license = "MIT"

[lints]
workspace = true

[features]
default = []
regulatory-fips = ["aws-lc-rs/fips"]

[dependencies]
aws-lc-rs = { version = "1.16", features = ["aws-lc-sys"] }
zeroize = { version = "1", features = ["derive", "alloc", "serde"] }
reed-solomon-simd = "3.1"
bitvec = { version = "1.0", features = ["serde"] }
blake3 = "1"
subtle = "2.6"
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
prost = "0.14"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
proptest = "1.5"
